--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 torch<1.6.1
 torchvision<0.7.1
-munch
-numpy
-marshmallow
-matplotlib
-tifffile
+munch<2.5.1
+numpy<1.19.2
+marshmallow<3.7.2
+matplotlib<3.3.1
+tifffile<2020.7.25
+zipp<3.1.1
+click<7.1.3
+sklearn
