--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,7 @@ matplotlib<3.3.1
 tifffile<2020.7.25
 zipp<3.1.1
 click<7.1.3
-sklearn
+sklearn<0.0.1
+seaborn<0.11.1
+pandas<1.1.3
+tensorboard<2.3.1
