--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-torch<1.6.1
-torchvision<0.7.1
+torch~=1.7.1
+torchvision~=0.8.2
 munch<2.5.1
-numpy<1.19.2
+numpy~=1.20.1
 marshmallow<3.7.2
 matplotlib<3.3.1
 tifffile<2020.7.25
@@ -9,13 +9,25 @@ zipp<3.1.1
 click<7.1.3
 sklearn<0.0.1
 seaborn<0.11.1
-pandas<1.1.3
+pandas~=1.2.1
 tensorboard<2.3.1
-opencv-python<4.4.1
+opencv-python~=4.4.0.46
 tensorboard<2.3.1
 lmdb<1.0.1
 pyarrow<1.0.2
-tqdm<4.50.3
-scikit-image<0.17.3
+tqdm~=4.56.0
+scikit-image~=0.18.1
 jupyter<1.0.1
 eo-learn-core<0.8.1
+
+GDAL~=3.0.4
+Shapely~=1.7.1
+Pillow~=8.1.0
+geffnet~=1.0.0
+scikit-learn~=0.23.2
+imgaug~=0.2.6
+setuptools~=52.0.0
+apex~=0.9.10.dev0
+rasterio~=1.2.0
+aitlas~=0.0.1
+solaris~=0.4.0
