--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+# links needed for torch version
+--find-links https://download.pytorch.org/whl/torch_stable.html
 torch<1.6.1
 torchvision<0.7.1
 munch<2.5.1
@@ -18,6 +20,5 @@ pyarrow<1.0.2
 tqdm<4.50.3
 scikit-image<0.17.3
 jupyter<1.0.1
-eo-learn-core<0.8.1
 pytorch-ignite<0.5
-faiss-cpu<1.8.0
+faiss-cpu<1.7.9
