--- a/requirements.txt
+++ b/requirements.txt
@@ -35,7 +35,6 @@ utm~=0.7.0
 osgeo~=0.0.0
 geopandas~=0.8.1
 Pillow~=8.1.0
-setuptools~=49.2.1
 GDAL~=3.0.4
 geffnet~=1.0.0
 scikit-learn~=0.23.2
@@ -43,5 +42,5 @@ imgaug~=0.2.6
 setuptools~=52.0.0
 apex~=0.9.10.dev0
 rasterio~=1.2.0
-aitlas~=0.0.1
+# aitlas~=0.0.1
 solaris~=0.4.0
