--- a/requirements.txt
+++ b/requirements.txt
@@ -15,14 +15,13 @@ pandas~=1.2.1
 tensorboard<2.3.1
 opencv-python~=4.4.0.46
 tensorboard<2.3.1
-lmdb<1.0.1
+lmdb
 pyarrow<1.0.2
 tqdm~=4.56.0
 scikit-image~=0.18.1
 jupyter<1.0.1
 pytorch-ignite<0.5
 faiss-cpu<1.7.9
-eo-learn-core<0.8.1
 
 scikit-multilearn~=0.2.0
 arff~=0.9
