--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 # links needed for torch version
---find-links https://download.pytorch.org/whl/torch_stable.html
-torch<1.6.1
-torchvision<0.7.1
+# --find-links https://download.pytorch.org/whl/torch_stable.html
+
+torch~=1.9.1
+torchvision~=0.10.1
 munch<2.5.1
 numpy~=1.20.1
 marshmallow<3.7.2
