--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,32 @@
 # links needed for torch version
---find-links https://download.pytorch.org/whl/torch_stable.html
-torch<1.6.1
-torchvision<0.7.1
-munch<2.5.1
-numpy~=1.20.1
-marshmallow<3.7.2
-matplotlib<3.3.1
-tifffile<2020.7.25
-zipp<3.1.1
-click<7.1.3
-sklearn<0.0.1
-seaborn<0.11.1
-pandas~=1.2.1
-tensorboard<2.3.1
-opencv-python~=4.4.0.46
-tensorboard<2.3.1
-lmdb
-pyarrow<1.0.2
-tqdm~=4.56.0
-scikit-image~=0.18.1
-jupyter<1.0.1
+torch>=1.10.0
+torchvision>=0.11.1
+munch>=2.5.0
+marshmallow>=3.13.1
+click>=7.1.3
+tifffile>=2021.8.8
+lmdb>=1.2.1
+zipp>=3.1.1
+numpy>=1.21.1
+pandas>=1.3.2
 h5py<3.2.1
-pytorch-ignite<0.5
-faiss-cpu<1.7.9
+dill>=0.3.4
+arff>=0.9
 
-scikit-multilearn~=0.2.0
-arff~=0.9
-dill<0.3.5
+matplotlib>=3.4.1
+tensorboard>=2.6.0
+tqdm>=4.56.0
+seaborn>=0.11.1
 
-timm~=0.4.12
-segmentation-models-pytorch~=0.2.0
+albumentations>=1.0.3
+opencv-python>=4.5.3
+scikit-learn>=0.24.1
+scikit-image>=0.18.1
+scikit-multilearn>=0.2.0
+pytorch-ignite>=0.4.6
+faiss-cpu>=1.7.1
+timm>=0.4.12
+segmentation-models-pytorch>=0.2.0
 
-albumentations~=1.0.3
-
-eo-learn-geometry==0.10.0
-eo-learn-core==0.10.0
+eo-learn-geometry>=0.10.0
+eo-learn-core>=0.10.0
