--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -12,8 +12,7 @@ version: 2
 build:
   os: ubuntu-22.04
   tools:
-    python: "3.11"
-
+    python: "miniconda3-4.7"
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
   configuration: docs/conf.py
