--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -21,6 +21,12 @@ conda:
   environment: docs/environment.yml
 # We recommend specifying your dependencies to enable reproducible builds:
 # https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
-# python:
-#   install:
-#   - requirements: docs/requirements.txt
+python:
+  # Install our python package before building the docs
+  install:
+    - method: pip
+      path: .
+
+formats:
+  - html
+  - pdf
