--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,4 +1,4 @@
-version: 2
+version: 3
 formats: all
 
 # .readthedocs.yaml
@@ -17,16 +17,19 @@ build:
 sphinx:
   configuration: docs/source/conf.py
 
-conda:
-  environment: docs/environment.yml
 # We recommend specifying your dependencies to enable reproducible builds:
 # https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
+  use_system_site_packages: true
   # Install our python package before building the docs
   install:
     - method: pip
       path: .
-    - requirements: requirements.txt
+
+requirements_file: requirements.txt
+
+conda:
+  environment: docs/environment.yml
 
 formats:
   - pdf
