--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -23,7 +23,7 @@ sphinx:
 python:
   # Install our python package before building the docs
   install:
-    - requirements: requirements.txt
+   # - requirements: requirements.txt
     - method: pip
       path: .
 
