--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -9,3 +9,32 @@ dependencies:
     - nbsphinx
     - sphinx-book-theme
     - sphinx_mdinclude
+    - torch>=1.10.0
+    - torchvision>=0.11.1
+    - munch>=2.5.0
+    - marshmallow>=3.13.1
+    - click>=7.1.3
+    - tifffile>=2021.8.8
+    - lmdb>=1.2.1
+    - zipp>=3.1.1
+    - numpy>=1.21.1
+    - pandas>=1.3.2
+    - h5py<3.2.1
+    - dill>=0.3.4
+    - arff>=0.9
+    - matplotlib>=3.4.1
+    - tensorboard>=2.6.0
+    - tqdm>=4.56.0
+    - seaborn>=0.11.1
+    - albumentations>=1.0.3
+    - opencv-python>=4.5.3
+    - scikit-learn>=0.24.1
+    - scikit-image>=0.18.1
+    - scikit-multilearn>=0.2.0
+    - pytorch-ignite>=0.4.6
+    - faiss-cpu>=1.7.1
+    - timm>=0.4.12
+    - segmentation-models-pytorch>=0.2.0
+    - torchmetrics>=0.10.2
+    - eo-learn-geometry>=0.10.0
+    - eo-learn-core>=0.10.0
