--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -12,7 +12,10 @@ version: 2
 build:
   os: ubuntu-22.04
   tools:
-    python: "miniconda3-4.7"
+    python: "3.9"
+   commands:
+      - pip install -r requirements.txt
+      - pip install .
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
   configuration: docs/source/conf.py
@@ -20,12 +23,11 @@ sphinx:
 # We recommend specifying your dependencies to enable reproducible builds:
 # https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 
-python:
-  # Install our python package before building the docs
-  install:
-   # - requirements: requirements.txt
-    - method: pip
-      path: .
+# python:
+#   # Install our python package before building the docs
+#   install:
+#     - requirements: requirements.txt
+#     - method: pip
 
 conda:
   environment: docs/environment.yml
