--- a/requirements.txt
+++ b/requirements.txt
@@ -12,12 +12,10 @@ pandas>=1.3.2
 h5py<3.2.1
 dill>=0.3.4
 arff>=0.9
-
 matplotlib>=3.4.1
 tensorboard>=2.6.0
 tqdm>=4.56.0
 seaborn>=0.11.1
-
 albumentations>=1.0.3
 opencv-python>=4.5.3
 scikit-learn>=0.24.1
@@ -28,6 +26,10 @@ faiss-cpu>=1.7.1
 timm>=0.4.12
 segmentation-models-pytorch>=0.2.0
 torchmetrics>=0.10.2
-
 eo-learn-geometry>=0.10.0
 eo-learn-core>=0.10.0
+pandoc==2.3
+ipykernel==6.15.0
+nbsphinx==0.9.1
+sphinx-book-theme==1.0.1
+sphinx_mdinclude==0.5.3
