--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,21 +1,15 @@
-version: 3
+version: 2
 formats: all
 
 # .readthedocs.yaml
 # Read the Docs configuration file
 # See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
 
-# Required
-version: 2
-
 # Set the version of Python and other tools you might need
 build:
   os: ubuntu-22.04
   tools:
-    python: "3.9"
-   commands:
-      - pip install -r requirements.txt
-      - pip install .
+    python: "miniconda3-4.7"
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
   configuration: docs/source/conf.py
@@ -23,11 +17,9 @@ sphinx:
 # We recommend specifying your dependencies to enable reproducible builds:
 # https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 
-# python:
-#   # Install our python package before building the docs
-#   install:
-#     - requirements: requirements.txt
-#     - method: pip
+python:
+   install:
+   - requirements: requirements.txt
 
 conda:
   environment: docs/environment.yml
