--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -20,6 +20,8 @@ sphinx:
 python:
    install:
    - requirements: requirements.txt
+   - method: pip
+      path: .
 
 # conda:
 #   environment: docs/environment.yml
