--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 # links needed for torch version
+numpy>=1.21.1
 torch>=1.10.0
 torchvision>=0.11.1
 munch>=2.5.0
@@ -7,7 +8,6 @@ click>=7.1.3
 tifffile>=2021.8.8
 lmdb>=1.2.1
 zipp>=3.1.1
-numpy>=1.21.1
 pandas>=1.3.2
 h5py<3.2.1
 dill>=0.3.4
@@ -35,4 +35,4 @@ sphinx-book-theme==1.0.1
 sphinx_mdinclude==0.5.3
 ttach==0.0.3
 geffnet==1.0.2
-gdal
+gdal==2.4.0
